--- a/app/src/main/res/layout/activity_btdevice_setting.xml
+++ b/app/src/main/res/layout/activity_btdevice_setting.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@drawable/shape">
 
     <LinearLayout
         android:id="@+id/header"
@@ -12,14 +13,14 @@
         android:contentDescription="@string/system_image_search"
         android:background="@color/headbg"
         android:orientation="horizontal"
-         >
+        >
 
         <ImageView
-            android:id="@+id/search"
+            android:id="@+id/iv_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/system_image_search"
-            android:background="@drawable/search_head"
+            android:background="@drawable/back_selector"
             android:focusable="true"
             android:clickable="true"
             android:layout_marginTop="8dp"
@@ -30,40 +31,56 @@
             android:id="@+id/device_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/devicelist"
+            android:text="test"
             android:textColor="@color/text_white"
             android:textSize="18sp"
             android:layout_weight="1"
             style="@style/text_head" />
-
-        <ImageView
-            android:id="@+id/testkey"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/system_image_search"
-            android:background="@drawable/search_head"
-            android:adjustViewBounds="true"
-            android:baselineAlignBottom="false"
-            android:focusable="true"
-            android:clickable="true"
-            android:visibility="visible"
-            android:layout_marginTop="5dp"
-            android:layout_marginRight="8dp">
-        </ImageView>
     </LinearLayout>
 
-    <RelativeLayout
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:gravity="center_vertical" >
+        android:orientation="horizontal"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:layout_margin="8dp">
 
-        <com.watch.customer.SlideDeleteListView
-            android:id="@+id/devicelist"
-            android:layout_width="fill_parent"
-            android:layout_height="match_parent"
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:src="@drawable/defaultpic" />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText"
+            android:layout_gravity="center_vertical"
+            android:layout_marginLeft="8dp"
+            android:background="@drawable/shape" />
+
+    </LinearLayout>
+
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:background="@drawable/shape">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/ls_listview"
             android:divider="#dddddd"
-            android:dividerHeight="1dp">
-        </com.watch.customer.SlideDeleteListView>
+            android:dividerHeight="0.5dp"
+            android:focusable="true" />
 
-    </RelativeLayout>
+    </FrameLayout>
+
+
+
+
 </LinearLayout>
