--- a/app/src/main/res/layout/activity_devicelist.xml
+++ b/app/src/main/res/layout/activity_devicelist.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/system_image_search"
-            android:background="@drawable/search_head"
+            android:background="@drawable/search_btn_bg"
             android:focusable="true"
             android:clickable="true"
             android:layout_marginTop="8dp"
@@ -41,7 +41,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:contentDescription="@string/system_image_search"
-            android:background="@drawable/search_head"
+            android:background="@drawable/edit_btn_bg"
             android:adjustViewBounds="true"
             android:baselineAlignBottom="false"
             android:focusable="true"
