--- a/app/src/main/res/layout/activity_antilost_setting.xml
+++ b/app/src/main/res/layout/activity_antilost_setting.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/text_white">
 
     <LinearLayout
         android:id="@+id/header"
@@ -54,7 +55,7 @@
             android:layout_gravity="center_vertical" />
         
         <Switch
-            android:id="@+id/switch1"
+            android:id="@+id/switchAntiLost"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -100,7 +101,7 @@
             android:layout_gravity="center_vertical" />
 
         <Switch
-            android:id="@+id/switch2"
+            android:id="@+id/switchLight"
             android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -130,7 +131,7 @@
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginRight="5dp">
+       >
 
       <Button
           android:id="@+id/btn_near"
@@ -200,15 +201,15 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/arrow_right"
+            android:background="@drawable/small_voice"
             android:layout_gravity="center"
             android:layout_marginLeft="5dp" />
         <SeekBar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/seekBar"
+            android:id="@+id/seekBarVolume"
             android:layout_weight="5"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
@@ -216,8 +217,8 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/arrow_right"
+            android:layout_height="wrap_content"
+            android:background="@drawable/big_voice"
             android:layout_weight="1"
             android:layout_gravity="center"
             android:layout_marginRight="5dp" />
@@ -258,8 +259,8 @@
         <ImageView
             android:id="@+id/ivRingtone"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:background="@drawable/arrow_right"
+            android:layout_height="wrap_content"
+            android:background="@drawable/right_arrow"
             android:layout_weight="1"
             android:clickable="true"
             android:focusable="true"
