--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -3,7 +3,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:showDividers="beginning">
 
     <LinearLayout
@@ -58,9 +58,9 @@
     <ImageView
         android:id="@+id/right_arrow"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="30dp"
         android:layout_weight="2.5"
-        android:src="@drawable/arrow_right"
-        />
+        android:layout_gravity="center_vertical"
+        android:src="@drawable/device_click_arrow" />
 
     </LinearLayout>
