--- a/app/src/main/res/layout/list_item3.xml
+++ b/app/src/main/res/layout/list_item3.xml
@@ -16,11 +16,12 @@
 
     <ImageView
         android:id="@+id/img_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
         android:layout_weight ="1"
         android:visibility="invisible"
-        android:src="@drawable/check_true"
-        android:layout_marginRight="15dp" />
+        android:src="@drawable/select_icon"
+        android:layout_marginRight="15dp"
+        android:layout_gravity="center_vertical" />
 
 </LinearLayout>
