--- a/app/src/main/res/layout/loading_dialog.xml
+++ b/app/src/main/res/layout/loading_dialog.xml
@@ -4,6 +4,7 @@
 	android:orientation="vertical"
 	android:layout_width="fill_parent" 
 	android:layout_height="fill_parent"
+	android:background="@color/TextColorGray"
 	android:minHeight="60dp"
 	android:minWidth="180dp"
 	android:gravity="center"
@@ -13,12 +14,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:indeterminateDrawable="@drawable/rotate_loading_360"
             android:indeterminateDuration="1800" />
 	<TextView 
 	    android:id="@+id/tipTextView"
 		android:layout_width="wrap_content" 
 		android:layout_height="wrap_content"
 		android:layout_marginLeft="10dp"
+        android:textColor="@color/text_white"
 		android:text="数据加载中……" />
 </LinearLayout>
