password and antilost

--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -43,14 +43,30 @@
         </RadioGroup>
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button1"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="25dp"
-        android:layout_marginTop="10dip" />
+        android:layout_alignParentRight="false"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:minWidth="100dip"
+        android:orientation="horizontal"
+        android:padding="2dp" >
+
+    <Button
+        android:id="@+id/bt_lost_history"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="lost history"
+        />
+
+        <Button
+            android:id="@+id/bt_location_history"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="loc history"
+            />
+
+    </LinearLayout>
 
 </RelativeLayout>
