--- a/app/src/main/res/layout/setting_activity.xml
+++ b/app/src/main/res/layout/setting_activity.xml
@@ -128,6 +128,7 @@
         android:background="@drawable/shape"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:visibility="gone"
         android:layout_marginLeft="10dp"
         android:layout_margin="10dp">
 
@@ -164,6 +165,7 @@
         android:background="@drawable/shape"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:visibility="gone"
         android:layout_marginLeft="10dp"
         android:layout_margin="10dp">
 
@@ -199,6 +201,7 @@
         android:background="@drawable/shape"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
+        android:visibility="gone"
         android:layout_marginLeft="10dp"
         android:layout_margin="10dp">
 
