--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,5 +5,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="view_normal_margin">.5dp</dimen>
     <dimen name="password_size">70dp</dimen>
-
+    <dimen name="dialog_text_size">12sp</dimen>
 </resources>
