--- a/app/src/main/res/layout/input_password_activity.xml
+++ b/app/src/main/res/layout/input_password_activity.xml
@@ -21,7 +21,7 @@
             android:contentDescription="@string/system_image_search"
             android:background="@drawable/back_selector"
             android:focusable="true"
-            android:visibility="visible"
+            android:visibility="invisible"
             android:clickable="true"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="5dp">
