drag and swipe list

--- a/app/src/main/res/layout/activity_devicelist.xml
+++ b/app/src/main/res/layout/activity_devicelist.xml
@@ -57,13 +57,14 @@
         android:layout_height="wrap_content"
         android:gravity="center_vertical" >
 
-        <com.watch.customer.xlistview.SlideDeleteListView
+        <com.watch.customer.xlistview.SlideAndDragListView
             android:id="@+id/devicelist"
             android:layout_width="fill_parent"
             android:layout_height="match_parent"
+            android:background="@color/TextColorWhite"
             android:divider="#dddddd"
             android:dividerHeight="1dp">
-        </com.watch.customer.xlistview.SlideDeleteListView>
+        </com.watch.customer.xlistview.SlideAndDragListView>
 
     </RelativeLayout>
 </LinearLayout>
