--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,15 @@
     <dimen name="view_normal_margin">.5dp</dimen>
     <dimen name="password_size">70dp</dimen>
     <dimen name="dialog_text_size">12sp</dimen>
+
+    <dimen name="slv_item_height">66dip</dimen>
+    <dimen name="slv_item_height2">90dip</dimen>
+
+    <dimen name="slv_item_bg_btn_width">48dip</dimen>
+    <dimen name="slv_item_bg_btn2_width">60dip</dimen>
+    <dimen name="slv_item_bg_btn_width_img">100dip</dimen>
+
+    <dimen name="txt_size">7sp</dimen>
+    <dimen name="txt_qq">5sp</dimen>
+
 </resources>
