--- a/app/src/main/res/layout/device_item.xml
+++ b/app/src/main/res/layout/device_item.xml
@@ -45,7 +45,7 @@
             />
         </LinearLayout>
 
-    <Button
+    <com.watch.customer.ui.MyButton
         android:id="@+id/device_button"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -53,6 +53,7 @@
         android:text="connect"
         android:background="@drawable/shape"
         android:focusable="false"
+        android:clickable="true"
         android:layout_marginTop="10dp" />
 
     <ImageView
