--- a/app/src/main/res/layout/activity_findme_setting.xml
+++ b/app/src/main/res/layout/activity_findme_setting.xml
@@ -31,7 +31,7 @@
             android:id="@+id/device_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Find me"
+            android:text="@string/str_find_me"
             android:textColor="@color/text_white"
             android:textSize="18sp"
             android:layout_weight="1"
@@ -47,7 +47,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Device alert"
+            android:text="@string/str_device_alert"
             android:textSize="18sp"
             android:layout_marginLeft="5dp"
             android:id="@+id/textView1"
@@ -91,7 +91,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Phone alert"
+            android:text="@string/str_phone_alert"
             android:textSize="18sp"
             android:layout_marginLeft="5dp"
             android:id="@+id/textView4"
@@ -161,7 +161,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Ringtone"
+            android:text="@string/str_ringtone"
             android:layout_weight="3"
             android:layout_gravity="center_vertical"
             android:gravity="left"
@@ -187,8 +187,6 @@
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
         android:background="#dddddd">
-
     </View>
-
 
 </LinearLayout>
