--- a/app/src/main/res/layout/activity_location.xml
+++ b/app/src/main/res/layout/activity_location.xml
@@ -14,40 +14,6 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="80dip"
-        android:background="#D000"
-        android:visibility="gone"
-        android:minWidth="100dip"
-        android:orientation="vertical"
-        android:padding="2dp" >
-
-        <RadioGroup
-            android:id="@+id/radioGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:contentDescription="定位icon" >
-
-            <RadioButton
-                android:id="@+id/defaulticon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:checked="true"
-                android:text="默认图标" >
-            </RadioButton>
-
-            <RadioButton
-                android:id="@+id/customicon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="自定义图标" >
-            </RadioButton>
-        </RadioGroup>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentRight="false"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
@@ -59,14 +25,14 @@
         android:id="@+id/bt_lost_history"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="lost history"
+        android:text="@string/lost_hist"
         />
 
         <Button
             android:id="@+id/bt_location_history"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="loc history"
+            android:text="@string/loc_hist"
             />
 
     </LinearLayout>
