--- a/app/src/main/res/layout/input_password_activity.xml
+++ b/app/src/main/res/layout/input_password_activity.xml
@@ -31,7 +31,7 @@
             android:id="@+id/tv_title_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Setup Password"
+            android:text="@string/str_setup_pass"
             android:textColor="@color/text_white"
             android:textSize="18sp"
             android:layout_weight="1"
@@ -46,7 +46,7 @@
         android:id="@+id/tv_password_prompt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Enter password"
+        android:text="@string/str_enter_pass"
         android:textSize="18sp"
         android:layout_centerInParent="true"
         />
