--- a/app/src/main/res/layout/password_list_activity.xml
+++ b/app/src/main/res/layout/password_list_activity.xml
@@ -51,7 +51,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Turn Password On"
+            android:text="@string/str_turn_on_pass"
             android:id="@+id/text_turn_on_password"
             android:textSize="18sp"
             android:layout_marginLeft="5dp"
@@ -73,7 +73,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change Password"
+            android:text="@string/str_change_pass"
             android:id="@+id/text_change_password"
             android:textSize="18sp"
             android:layout_marginLeft="5dp"
