--- a/app/src/main/res/layout/camera_setting_dialog.xml
+++ b/app/src/main/res/layout/camera_setting_dialog.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
-            android:text="Camera Settings"
+            android:text="@string/str_camera_setting"
             android:textColor="@color/text_white"
             android:textSize="16sp" />
 
@@ -38,7 +38,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:text="continue"
+                android:text="@string/str_continuous"
                 android:textSize="@dimen/dialog_text_size" />
         </RelativeLayout>
 
@@ -90,7 +90,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
-                android:text="Interval"
+                android:text="@string/str_interval"
                 android:textSize="@dimen/dialog_text_size" />
         </RelativeLayout>
 
