--- a/app/src/main/res/layout/activity_antilost_setting.xml
+++ b/app/src/main/res/layout/activity_antilost_setting.xml
@@ -38,11 +38,12 @@
             style="@style/text_head" />
     </LinearLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginRight="5dp">
+
+
 
         <TextView
             android:layout_width="wrap_content"
@@ -50,20 +51,21 @@
             android:text="@string/str_anti_lost"
             android:id="@+id/textView"
             android:textSize="18sp"
-            android:layout_weight="3"
             android:layout_marginLeft="5dp"
-            android:layout_gravity="center_vertical" />
-        
+            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true" />
+
         <Switch
             android:id="@+id/switchAntiLost"
-            android:layout_width="40dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginRight="5dp"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:layout_centerVertical="true"
+            android:layout_alignParentRight="true" />
 
-
-    </LinearLayout>
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -84,8 +86,9 @@
              />
     </FrameLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
+
+
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginRight="5dp">
@@ -96,18 +99,20 @@
             android:text="@string/str_light"
             android:id="@+id/textView2"
             android:textSize="18sp"
-            android:layout_weight="3"
             android:layout_marginLeft="5dp"
-            android:layout_gravity="center_vertical" />
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true" />
 
         <Switch
             android:id="@+id/switchLight"
-            android:layout_width="40dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginRight="5dp"
-            android:layout_gravity="center_vertical" />
-</LinearLayout>
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true" />
+</RelativeLayout>
+
+
 
     <FrameLayout
         android:layout_width="match_parent"
