--- a/app/src/main/res/layout/activity_findme_setting.xml
+++ b/app/src/main/res/layout/activity_findme_setting.xml
@@ -57,8 +57,7 @@
             />
     </FrameLayout>
 
-    <LinearLayout
-        android:orientation="horizontal"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_marginRight="5dp">
@@ -66,21 +65,21 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Light"
+            android:text="@string/str_light"
             android:id="@+id/textView2"
             android:textSize="18sp"
-            android:layout_weight="3"
             android:layout_marginLeft="5dp"
-            android:layout_gravity="center_vertical" />
+            android:layout_alignParentLeft="true"
+            android:layout_centerVertical="true" />
 
         <Switch
             android:id="@+id/switchLight"
-            android:layout_width="40dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_marginRight="5dp"
-            android:layout_gravity="center_vertical" />
-    </LinearLayout>
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true" />
+    </RelativeLayout>
 
     <FrameLayout
         android:layout_width="match_parent"
