--- a/app/src/main/res/layout/activity_findpassword.xml
+++ b/app/src/main/res/layout/activity_findpassword.xml
@@ -2,22 +2,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:background="@color/headbg"
         android:gravity="center_vertical"
-        android:orientation="horizontal" >
+        android:orientation="horizontal">
 
-          <ImageView
-                android:id="@+id/back"
-	            android:layout_width="50dp"
-	            android:layout_height="wrap_content"
-	            android:src="@drawable/back_selector"
-	            android:background="@drawable/null_btn_text"
-	            android:padding="10dp"/>
+        <ImageView
+            android:id="@+id/back"
+            android:layout_width="50dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/null_btn_text"
+            android:padding="10dp"
+            android:src="@drawable/back_selector" />
 
         <TextView
             android:layout_width="match_parent"
@@ -35,33 +35,36 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="10dp"
-        android:orientation="vertical" >
-  <EditText
+        android:orientation="vertical">
+
+        <!--
+        <EditText
             android:id="@+id/phone"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:hint="@string/register_edittext_phone"
             android:background="@drawable/edittext_selector"
+            android:hint="@string/register_edittext_phone"
             android:inputType="phone" />
 
+        -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:orientation="horizontal" >
+            android:layout_marginTop="10dp"
+            android:orientation="horizontal">
 
             <EditText
-                android:id="@+id/code"
+                android:id="@+id/phone"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center"
                 android:layout_weight="2"
                 android:background="@drawable/edittext_selector"
-                android:hint="@string/register_edittext_code"
+                android:hint="@string/register_edittext_phone"
                 android:inputType="number" />
 
             <Button
@@ -74,10 +77,14 @@
                 android:layout_marginStart="5dp"
                 android:layout_weight="1"
                 android:background="@drawable/blue_btn_text"
-                android:text="@string/register_button_code"
+                android:text="@string/str_get_code"
                 android:textColor="@color/text_white" />
         </LinearLayout>
-        
+
+
+
+
+        <!--
                 <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
@@ -117,6 +124,8 @@
             android:textColor="@color/text_white"
             android:text="@string/person_password_btn_save" />
         </RelativeLayout>
+            -->
     </LinearLayout>
+
 
 </LinearLayout>
