--- a/app/src/main/res/layout/activity_person_information.xml
+++ b/app/src/main/res/layout/activity_person_information.xml
@@ -208,7 +208,42 @@
         android:background="#dddddd"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"/>
-    
-    
-    
+
+    <LinearLayout
+        android:id="@+id/personmainLogout"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:orientation="horizontal"
+        android:paddingLeft="20dp"
+        android:paddingStart="20dp"
+        android:paddingRight="20dp"
+        android:paddingEnd="20dp">
+
+        <TextView
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            android:text="@string/person_main_image_logout"
+            android:textSize="@dimen/text_size"
+            android:gravity="center_vertical"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="end">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/arrow_right"
+                android:contentDescription="@string/person_main_image_logout"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.4dp"
+        android:background="#dddddd"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"/>
 </LinearLayout>
