switch button support

--- a/app/src/main/res/layout/password_list_activity.xml
+++ b/app/src/main/res/layout/password_list_activity.xml
@@ -31,7 +31,7 @@
             android:id="@+id/device_text"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="APP Password"
+            android:text="@string/str_app_password"
             android:textColor="@color/text_white"
             android:textSize="18sp"
             android:layout_weight="1"
