--- a/app/src/main/res/layout/activity_findme_setting.xml
+++ b/app/src/main/res/layout/activity_findme_setting.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@color/text_white"
     android:layout_width="match_parent"
@@ -72,11 +73,19 @@
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true" />
 
-        <Switch
+        <com.watch.customer.util.SwitchButton
             android:id="@+id/switchLight"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
+
+            android:textSize="16sp"
+
+            style="@style/SwitchButtonStyle"
+            android:textColor="#FFFFFF"
+            app:kswTextOff="@string/str_off"
+            app:kswTextOn="@string/str_on"
+
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true" />
     </RelativeLayout>
