--- a/app/src/main/res/layout/notification.xml
+++ b/app/src/main/res/layout/notification.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent"
+    android:background="@color/TextColorBlack"
+    >
 
     <ImageView
         android:id="@+id/down_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:src="@drawable/ic_launcher" />
+        android:src="@android:drawable/sym_def_app_icon" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -27,6 +29,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentLeft="true"
                 android:singleLine="true"
+                android:text="test"
                 android:ellipsize="marquee"
                 android:textColor="#FFFFFF"
                 android:textSize="16sp" />
@@ -42,6 +45,7 @@
                 android:id="@+id/down_rate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="25%"
                 android:textColor="#FFFFFF" 
                 android:layout_marginRight="5dp"/>
         </LinearLayout>
